<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/shape_bg"
    android:padding="25dp"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:src="@mipmap/pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/ff373b5e"
        android:textSize="22sp"
        android:text="@string/warning"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/ff717485"
        android:textSize="12sp"
        android:text="@string/hint2"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/main_clear"
            android:layout_width="120dp"
            android:layout_height="44dp"
            android:background="@drawable/shape_clear"
            android:gravity="center"
            android:textColor="@color/ff4b71ed"
            android:fontFamily="@font/poppins_bold"
            android:textSize="14sp"
            android:text="@string/cancel_"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/main_calculate"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:layout_marginStart="18dp"
            android:background="@drawable/shape_cal"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:textSize="14sp"
            android:text="@string/confirm"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>