<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:background="@drawable/main_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/set_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@mipmap/back_w" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textSize="17sp"
                android:textColor="@color/ff373b5e"
                android:text="@string/settings"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none"
            android:overScrollMode="never">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    radius="@{12}"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_horizontal"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:layout_marginTop="60dp"
                        android:src="@mipmap/ic_launcher"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="17dp"
                        android:fontFamily="@font/poppins_bold"
                        android:textSize="18sp"
                        android:textColor="@color/ff373b5e"
                        android:text="@string/app_name"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/set_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="14sp"
                        android:textColor="@color/ff717485"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="60dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableStart="@mipmap/email"
                            android:drawablePadding="8dp"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="14sp"
                            android:textColor="@color/ff373b5e"
                            android:text="@string/contact_us"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:textColor="@color/ff4b71ed"
                            android:textSize="14sp"
                            android:text="attaur0521@gmail.com"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/fff9faff"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/set_about"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:drawableStart="@mipmap/guanyu"
                        android:drawableEnd="@mipmap/arrow1"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="14sp"
                        android:textColor="@color/ff373b5e"
                        android:text="@string/about_us"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/fff9faff"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/set_privacy"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:drawableStart="@mipmap/yinsi"
                        android:drawableEnd="@mipmap/arrow1"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="14sp"
                        android:textColor="@color/ff373b5e"
                        android:text="@string/privacy_policy"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/fff9faff"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/set_share"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:drawableStart="@mipmap/fenxiang"
                        android:drawableEnd="@mipmap/arrow1"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="14sp"
                        android:textColor="@color/ff373b5e"
                        android:text="@string/share_app"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/fff9faff"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/set_data"
                        android:layout_width="173dp"
                        android:layout_height="44dp"
                        android:background="@drawable/shape_cal"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="60dp"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:text="@string/data_deletion"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </FrameLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>