<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="result"
            type="com.simplesu.simplemodel.be.ResultBean" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:background="@drawable/main_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/result_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@mipmap/back_w" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textSize="17sp"
                android:textColor="@color/ff373b5e"
                android:text="@string/result"
                android:layout_centerInParent="true"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/result_schedule"
                android:layout_width="68dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:layout_centerVertical="true"
                android:background="@drawable/shape_cal"
                android:gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/schedule" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none"
            android:overScrollMode="never">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    radius="@{12}"
                    android:padding="20dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="14sp"
                            android:text="@{result.text}"
                            android:textColor="@color/ff373b5e"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginStart="6dp"
                            android:layout_marginEnd="6dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:background="@drawable/shape_line"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:textSize="14sp"
                            android:text="@{result.num1}"
                            android:textColor="@color/ff373b5e"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="14sp"
                            android:text="@string/total_interest_payab"
                            android:textColor="@color/ff373b5e"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginStart="6dp"
                            android:layout_marginEnd="6dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:background="@drawable/shape_line"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:textSize="14sp"
                            coin="@{result.num2}"
                            android:textColor="@color/ff373b5e"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_regular"
                                android:textSize="14sp"
                                android:text="@string/total_payment"
                                android:textColor="@color/ff373b5e"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_regular"
                                android:textSize="11sp"
                                android:text="@string/principal_interest_fees_charges"
                                android:textColor="@color/ff717485"/>


                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginStart="6dp"
                            android:layout_marginEnd="6dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:background="@drawable/shape_line"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:layout_gravity="center_vertical"
                            android:textSize="14sp"
                            coin="@{result.num3}"
                            android:textColor="@color/ff373b5e"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    radius="@{12}">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/ff373b5e"
                        android:textSize="14sp"
                        android:layout_marginTop="30dp"
                        android:text="@string/break_up_of_total_payment"/>

                    <com.simplesu.simplemodel.arch.ChartView
                        android:id="@+id/result_chart"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="260dp"
                        android:layout_height="260dp"
                        android:layout_marginTop="40dp"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="8dp"
                            android:layout_height="8dp"
                            android:layout_marginEnd="6dp"
                            android:background="@color/ff4b71ed"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/ff373b5e"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="12sp"
                            android:text="@string/principal"/>

                        <View
                            android:layout_width="8dp"
                            android:layout_height="8dp"
                            android:layout_marginEnd="6dp"
                            android:layout_marginStart="20dp"
                            android:background="@color/ffffba4f"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/ff373b5e"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="12sp"
                            android:text="@string/interest"/>

                        <View
                            android:layout_width="8dp"
                            android:layout_height="8dp"
                            android:layout_marginEnd="6dp"
                            android:layout_marginStart="20dp"
                            android:background="@color/ffff7946"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/ff373b5e"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="12sp"
                            android:text="@string/fees_charge"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>